base-logic/main/default/objects/LB_FormConfiguration__mdt/LB_FormConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>LB_FormConfiguration</label>
    <pluralLabel>LB_FormConfigurations</pluralLabel>
</CustomObject>