base-logic/main/default/objects/LB_FormConfiguration__mdt/fields/Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Name__c</fullName>
    <inlineHelpText>API name of the fields to be used to display then fields</inlineHelpText>
    <label>Field Set Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>