base-logic/main/default/objects/LB_FormConfiguration__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <inlineHelpText>API name of the object</inlineHelpText>
    <label>Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>