base-logic/main/default/objects/LB_FormConfiguration__mdt/fields/PreProcessFormClass__c.field-meta.xml
<CustomField>
    <fullName>PreProcessFormClass__c</fullName>
    <inlineHelpText>Name of the class that implements the interface LB_IPreProcessForm</inlineHelpText>
    <label>Pre Process Form Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>