base-logic/main/default/objects/LB_FormConfiguration__mdt/fields/Process_Form_Class__c.field-meta.xml
<CustomField>
    <fullName>Process_Form_Class__c</fullName>
    <inlineHelpText>Name of the Class that implements LB_IProcessForm</inlineHelpText>
    <label>Process Form Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>